--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,15 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 spring.thymeleaf.dialect.security=true
-#spring.mvc.view.prefix=/templates/
-#spring.mvc.view.suffix=.html
-#server.error.whitelabel.enabled=false
-#server.error.path=/error
-#spring.web.resources.static-locations=file:./svgs/
+
 materiel.schemas=C:\\svgs
 handler.file=file:C:/svgs/
+
+#logging.file.path=.
+#logging.file.name=application_materiel.log
+
+#logging.logback.rollingpolicy.file-name-pattern=applicationmateriel.%d{yyyy-MM-dd}.%i.gz.log
+#logging.logback.rollingpolicy.max-file-size=5MB
+#logging.logback.rollingpolicy.total-size-cap=1GB
+#logging.logback.rollingpolicy.max-history=30
+#logging.logback.rollingpolicy.clean-history-on-start=true
