en panne, titre de pret, caracts for pcs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 spring.thymeleaf.dialect.security=true
-
+server.port=446
 materiel.schemas=C:\\svgs
 handler.file=file:C:/svgs/
 
